cut down images

--- a/app/cars.html
+++ b/app/cars.html
@@ -102,7 +102,7 @@
 
 <p>$34.50 per day</p>
 
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article >
 </article >
 
@@ -121,7 +121,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -138,7 +138,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -153,7 +153,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -170,7 +170,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -185,7 +185,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -210,7 +210,7 @@
 
 <p>$34.50 per day</p>
 
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article >
 </article >
 
@@ -229,7 +229,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -246,7 +246,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -261,7 +261,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -278,7 +278,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#" >Continue &rsaquo;</a></figure>
 </article>
 </article >
 
@@ -293,7 +293,7 @@
 <figure class="car-icons"><img src="images/car-rental-website-auto-or-manual.png" alt="car-rental-website-auto-or-manual" /></figure><br/>
 </article>
 <p>$34.50 per day</p>
-<figure class="carsbutton"><a href="#"><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<figure class="carsbutton"><a href="#">Continue &rsaquo;</a></figure>
 </article>
 </article > 
 
@@ -314,7 +314,7 @@
 <!----right column---->
 <div class="large-3 medium-3 small-12 columns">
 <aside id="right_coler">
-<br/><br/><br/>
+<br/><br/><br/><br/><br/><br/>
 <!--info_box2-->
 <div id="image2">
 <h2>Weekend Car Rental Special</h2>
@@ -369,15 +369,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script > window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>');</script>
 <!-- Fallback to local -->
-<script>
-$(document).ready(function(){
 
-  $('#image2').css('background-image', 'url("images/car-rental-website-front-bg-3.png")');
-  $('#image3').css('background-image', 'url("images/car-rental-website-front-bg-1.png")');
-
-});
-  
-</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="scripts/jquery-ui-1.11.2.custom/jquery-ui.min.js"></script>      
 <script>
