--- a/app/index.html
+++ b/app/index.html
@@ -173,7 +173,7 @@
 <figure id="banner"><!--Banner Text-->
   <figcaption class="big"> Lorem ipsum dolor sit amet,</figcaption>
     <div id="index_form_btn" onclick="fadeIn();"  >Click here to get Quote</div><!--SeeQuote_button-->
-    <figcaption>consectetur adipiscing elit.Nulla cursus dolor in enim sagittis </figcaption><!--Banner Text-->
+    <figcaption>Consectetur adipiscing elit. Nulla cursus dolor in enim sagittis </figcaption><!--Banner Text-->
   <figure id="bannerimage"><img src="images/car-rental-website-4x4-car.png" alt="car-rental-website-4x4-car" /></figure>
 </figure><!--banner end-->
 
