--- a/app/specials.html
+++ b/app/specials.html
@@ -89,8 +89,8 @@
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+	<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -111,8 +111,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;29<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -134,8 +134,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <div class="specials_box_txt">
@@ -156,8 +156,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;29<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -179,8 +179,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -202,8 +202,8 @@ Advance booking time: 4 hours
 </div>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -229,8 +229,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;29<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -251,8 +251,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -274,8 +274,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <div class="specials_box_txt">
@@ -296,8 +296,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;29<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -319,8 +319,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -342,8 +342,8 @@ Advance booking time: 4 hours
 </div>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;29<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -372,8 +372,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -394,8 +394,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -417,8 +417,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <div class="specials_box_txt">
@@ -439,8 +439,8 @@ Advance booking time: 4 hours </p>
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -462,8 +462,8 @@ Advance booking time: 4 hours
 </article>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
@@ -485,8 +485,8 @@ Advance booking time: 4 hours
 </div>
 
 <div class="specials_btn_box">
-<figure class="special_price"><img src="images/car-rental-price-per-day.png" alt="car-rental-price-per-day"/></figure>
-<figure class="cont_btn"><a href="" ><img src="images/car-rental-website-continue-btn.png" alt="car-rental-website-continue-btn" /></a></figure>
+<p class="special_price">&pound;19<span>per Day</span></p>
+<span class="cont_btn"><a href="" > Continue </a></span>
 </div>
 
 <article class="specials_box_txt">
