--- a/app/about.html
+++ b/app/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html class="no-js" lang="en">
+<html class="no-js" lang="zxx">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="minimum-scale=0">
@@ -46,12 +46,12 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-        <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
-        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
-        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
-        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
-        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
-        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
+        <li class="active"><a href="index.html" >Home</a></li>
+        <li><a href="specials.html"  >Special Offers</a></li>
+        <li><a href="cars.html" >Cars</a></li>
+        <li><a href="location.html" >Locations</a></li>
+        <li><a href="about.html" >About</a></li>
+        <li><a href="contact.html" >Contact</a></li>
     </ul>    
 </nav>
  
@@ -85,12 +85,12 @@
 
 <div class="large-3 medium-3 small-12 columns" >
 <aside id="right_coler">
-	<br/><br/><br/></br></br></br>
+	<br/><br/><br/><br/><br/><br/>
 <article id="image5">
 <h2>Subscribe to newsletter</h2>
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>            
 <!--newsletter form-->    
-<form action="" method="post"   data-abide>
+<form method="post"   data-abide>
 <input name="NAME" type="text" placeholder="Name" required pattern="[a-zA-Z]+" />
 <!--<small class="error">Name must be letters.</small>-->
 <input name="EMAIL" type="email" placeholder="Email" required/>
@@ -110,12 +110,12 @@
        
    
       <ul id="footer_nav">
-        <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
-        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
-        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
-        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
-        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
-        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
+        <li><a href="index.html" >Home</a></li>
+        <li><a href="specials.html"  >Special Offers</a></li>
+        <li><a href="cars.html" >Cars</a></li>
+        <li><a href="location.html" >Locations</a></li>
+        <li><a href="about.html" >About</a></li>
+        <li><a href="contact.html" >Contact</a></li>
       </ul>
    
       
