--- a/app/specials.html
+++ b/app/specials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html class="no-js" lang="en">
+<html class="no-js" lang="zxx">
  <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="minimum-scale=0">
@@ -47,15 +47,14 @@
   
    <nav  id="primary_nav" class="top-bar-right" >
     <ul  class="vertical medium-horizontal menu" >
-       <li class="active"><a href="index.html" alt="car-rental-home-page">Home</a></li>
-        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
-        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
-        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
-        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
-        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
+        <li class="active"><a href="index.html" >Home</a></li>
+        <li><a href="specials.html"  >Special Offers</a></li>
+        <li><a href="cars.html" >Cars</a></li>
+        <li><a href="location.html" >Locations</a></li>
+        <li><a href="about.html" >About</a></li>
+        <li><a href="contact.html" >Contact</a></li>
     </ul>    
 </nav>
- 
 </div>
 
 
@@ -521,15 +520,14 @@ Advance booking time: 4 hours
 <div class="large-12 medium-12 small-12 columns">
 
 
-<ul id="footer_nav">
-    <li><a href="index.html" alt="car-rental-home-page">Home</a></li>
-        <li><a href="specials.html" alt="car-rental-specials-page" >Special Offers</a></li>
-        <li><a href="cars.html" alt="car-rental-cars-page">Cars</a></li>
-        <li><a href="location.html" "car-rental-locations-page">Locations</a></li>
-        <li><a href="about.html" alt="car-rental-about-page">About</a></li>
-        <li><a href="contact.html" alt="car-rental-contact-page">Contact</a></li>
-</ul>
-
+      <ul id="footer_nav">
+        <li><a href="index.html" >Home</a></li>
+        <li><a href="specials.html"  >Special Offers</a></li>
+        <li><a href="cars.html" >Cars</a></li>
+        <li><a href="location.html" >Locations</a></li>
+        <li><a href="about.html" >About</a></li>
+        <li><a href="contact.html" >Contact</a></li>
+      </ul>
 
 </div> 
 </footer>
