--- a/app/location.html
+++ b/app/location.html
@@ -84,10 +84,11 @@
 </div><!--worldsearchform end -->
 
 
-<div class="row"><!--inner content -->
-<div class="large-12 medium-12 small-12 columns">
+<div class="row" data-equalizer="foo"><!--inner content -->
+<div class="large-12 medium-12 small-12 columns" data-equalizer-watch="foo">
+  
 
-<article class="destinations" >
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>A</li>
             <li><a href="#">Country</a></li>
@@ -100,7 +101,7 @@
     </ul>
 </article>
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>B</li>
             <li><a href="#">Bolivia</a></li>
@@ -113,7 +114,7 @@
     </ul>
 </article> 
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>C</li>
             <li><a href="#">Croatia</a></li>
@@ -126,7 +127,7 @@
     </ul>
 </article> 
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>D</li>
         <li><a href="#">Denmark
@@ -140,7 +141,7 @@
         </ul>
 </article> 
         
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>E</li>
         <li><a href="#">Egypt</a></li>
@@ -153,7 +154,7 @@
         </ul>
 </article> 
  
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>F</li>
         <li><a href="#">France</a></li>
@@ -165,7 +166,14 @@
         <li><a href="#">Country</a></li>
         </ul>
 </article>
-<article class="destinations">
+
+</div>
+</div>
+
+<div class="row" data-equalizer="foo"><!--inner content -->
+<div class="large-12 medium-12 small-12 columns" data-equalizer-watch="foo">
+
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>G</li>
         <li><a href="#">Germany</a></li>
@@ -177,7 +185,7 @@
         <li><a href="#">Country</a></li>
         </ul>
 </article>
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>H</li>
         <li><a href="#">Holland</a></li>
@@ -190,7 +198,7 @@
         </ul>
 </article>
  
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>I</li>
         <li><a href="#">India</a></li>
@@ -203,7 +211,7 @@
         </ul>
 </article>
  
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>J</li>
         <li><a href="#">Jamaica</a></li>
@@ -216,7 +224,7 @@
         </ul>
 </article>
  
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>K</li>
         <li><a href="#">Khazakstan</a></li>
@@ -229,7 +237,7 @@
         </ul>
 </article>
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
         <ul>
         <li>L</li>
         <li><a href="#">Los Angeles</a></li>
@@ -242,7 +250,14 @@
         </ul>
 </article>
 
-<article class="destinations"> 
+</div>
+</div>
+
+<div class="row" data-equalizer="foo"><!--inner content -->
+<div class="large-12 medium-12 small-12 columns" data-equalizer-watch="foo">
+
+
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
         <li>M</li>
             <li><a href="#">Mauritius</a></li>
@@ -255,7 +270,7 @@
     </ul>
 </article>
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>N</li>
         <li><a href="#">Norway</a></li>
@@ -268,7 +283,7 @@
     </ul>
 </article> 
 
-<article class="destinations"> 
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
             <li>O</li>
             <li><a href="#">Oslo</a></li>
@@ -281,7 +296,7 @@
     </ul>
 </article> 
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
             <li>P</li>
             <li><a href="#">Panama</a></li>
@@ -294,7 +309,7 @@
     </ul>
 </article>
 
-<article class="destinations"> 
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
         <li>Q</li>
         <li><a href="#">Quebec</a></li>
@@ -307,7 +322,7 @@
     </ul>
 </article>
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>R</li>
         <li><a href="#">Russia</a></li>
@@ -320,7 +335,13 @@
     </ul>
 </article> 
 
-<article class="destinations">
+</div>
+</div>
+
+<div class="row" data-equalizer="foo"><!--inner content -->
+<div class="large-12 medium-12 small-12 columns" data-equalizer-watch="foo">
+
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>S</li>
         <li><a href="#">South Korea</a></li>
@@ -333,7 +354,7 @@
     </ul>
 </article> 
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>T</li>
         <li><a href="#">Thailand</a></li>
@@ -346,7 +367,7 @@
     </ul>
 </article> 
 
-<article class="destinations">
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>V</li>
         <li><a href="#">Venuzuela</a></li>
@@ -359,7 +380,7 @@
     </ul>
 </article> 
 
-<article class="destinations"> 
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
         <li>W</li>
         <li><a href="#">Country</a></li>
@@ -372,7 +393,7 @@
     </ul>
 </article> 
 
-<article class="destinations"> 
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
         <li>X</li>
         <li><a href="#">Country</a></li>
@@ -385,7 +406,7 @@
     </ul>
 </article>
 
-<article class="destinations"> 
+<article class="callout destinations" data-equalizer-watch="bar"> 
     <ul>
         <li>Y</li>
         <li><a href="#">Country</a></li>
@@ -398,7 +419,13 @@
     </ul>
 </article> 
 
-<article class="destinations">
+</div>
+</div>
+
+<div class="row" data-equalizer="foo"><!--inner content -->
+<div class="large-12 medium-12 small-12 columns" data-equalizer-watch="foo">
+
+<article class="callout destinations" data-equalizer-watch="bar">
     <ul>
         <li>Z</li>
         <li><a href="#">Country</a></li>
@@ -410,6 +437,7 @@
         <li><a href="#">Country</a></li>
     </ul>
 </article>
+
 
 
 </div>
