--- a/app/cars.html
+++ b/app/cars.html
@@ -302,36 +302,46 @@
 <div id="tabs-4"></div>
 <div id="tabs-5"></div>
 <div id="tabs-6"></div>
-
+<div class="clearfix"></div>
 </div>
 </div><!---Tabgroup end-->
 
 <br/><br/><br/>
-</article><!----left column end----> 
+</article><!--left column end--> 
 
-</div><!----column end---->
+</div><!--column end-->
 
-<!----right column---->
+<!--right column-->
 <div class="large-3 medium-3 small-12 columns">
 <aside id="right_coler">
 <br/><br/><br/><br/><br/><br/>
 <!--info_box2-->
 <div id="image2">
+
 <h2>Weekend Car Rental Special</h2>
 <figure>
-<img src="images/car-rental-website-luxury-car-audi.png" alt="car-rental-website-luxury-car-audi"  /></figure>
+<img src="images/car-rental-website-luxury-car-audi.png" alt="car-rental-website-luxury-car-audi"  />
+<figcaption>
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
 <div class="link_btn"><a href="cars.html" alt="car-rental-cars-page">Learn More</a></div>  
+</figcation>
+</figure>
+
 </div>
 <!--info_box2 end-->
 
 <!--info box 3-->      
 <div id="image3">
 <h2>Our Locations</h2>
+
 <figure>
-<img src="images/car-rental-website-locations-map.png" alt="car-rental-website-locations-map"  /></figure>
+<img src="images/car-rental-website-locations-map.png" alt="car-rental-website-locations-map"  />
+<figcaption>
 <p>Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus eu nisl bibendum facilisis.</p>
-<div class="link_btn"><a href="location.html" alt="car-rental-locations-page">All Locations</a></div>
+<div class="link_btn"><a href="location.html" alt="car-rental-locations-page">All Locations</a></div>  
+</figcation>
+</figure>
+
 </div>
 <!--info_box3 end-->
 
@@ -359,7 +369,7 @@
   </div> 
  </footer>
 </div><!--footer end-->
-<p class="copy">Raymond Thompson 2013<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
+<p class="copy">Raymond Thompson 2013 built from Photoshop template downloaded from www.phpjabber.com<br/>
 <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
 </p> 
 
