--- a/app/contact.html
+++ b/app/contact.html
@@ -110,7 +110,7 @@
 </article>
 </aside>
 </div>
-
+<div class="clearfix"></div>
 </div><!--end of inner wrapper -->
 
 <div class="row"><!--footer-->
@@ -134,7 +134,7 @@
 </div><!--footer end-->
 
 </div><!--wrapper end-->
-<p class="copy">Raymond Thompson 2013<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
+<p class="copy">Raymond Thompson 2013 - built from Photoshop template downloaded from www.phpjabber.com<br/>
 <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
 </p> 
 </div><!--row end-->
