--- a/app/specials.html
+++ b/app/specials.html
@@ -532,7 +532,7 @@ Advance booking time: 4 hours
 </div> 
 </footer>
 </div><!--footer end-->
-<p class="copy">Raymond Thompson 2013<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
+<p class="copy">Raymond Thompson 2013 built from Photoshop template downloaded from www.phpjabber.com<br/>
 <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
 </p> 
 </div><!--wrapper end-->
