--- a/app/location.html
+++ b/app/location.html
@@ -465,7 +465,7 @@
   </div> 
  </footer>
 </div><!--footer end-->
-<p class="copy">Raymond Thompson 2013<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
+<p class="copy">Raymond Thompson 2013 built from Photoshop template downloaded from www.phpjabber.com<br/>
  <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
 </p>
 </div><!--wrapper end-->
