--- a/app/401.html
+++ b/app/401.html
@@ -5,10 +5,11 @@
 <!--Scale-->
 <meta name="viewport" content="minimum-scale=0">
 <meta name="viewport" content="user-scalable=yes">
-<!--Resolution-->
 <meta name="viewport" content="target-densitydpi=device-dpi">
-<!--combined viewpoint values-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="copyright" content="&copy;raymondthompson" />
+<meta name="robots" content="noindex,nofollow">
 <!--End Scale-->
 <title>Car-Rental-401-Page</title>
 <link rel="stylesheet" href="Foundation-6/css/foundation.min.css" />
