--- a/app/location.html
+++ b/app/location.html
@@ -9,6 +9,10 @@
 <meta name="viewport" content="target-densitydpi=device-dpi">
 <!--combined viewpoint values-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="copyright" content="&copy;raymondthompson" />
+<meta name="robots" content="noindex,nofollow">
+
 <!--End Scale-->
 <title>Car-Rental-Location-Page</title>
 
