--- a/app/500.html
+++ b/app/500.html
@@ -1,15 +1,18 @@
 <!DOCTYPE HTML>
 <html class="no-js" lang="zxx">
+    
 <head>
+    
 <meta charset="utf-8" />
-<!--Scale-->
+
 <meta name="viewport" content="minimum-scale=0">
 <meta name="viewport" content="user-scalable=yes">
-<!--Resolution-->
 <meta name="viewport" content="target-densitydpi=device-dpi">
-<!--combined viewpoint values-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--End Scale-->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="copyright" content="&copy;raymondthompson" />
+<meta name="robots" content="noindex,nofollow">
+
 <title>Car-Rental-500-Page</title>
 
 <link rel="stylesheet" href="Foundation-6/css/foundation.min.css" />
