--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <link rel="stylesheet" href="styles/ie8.css" />
+<script src="scripts/vendor/jquery.min.js"></script>
 <script src="scripts/html5shiv.min.js"></script>
 <script src="scripts/Respond-master/dest/respond.min.js"></script>
 <script src="scripts/selectivizr.min.js"></script>
