--- a/app/about.html
+++ b/app/about.html
@@ -13,7 +13,7 @@
 
         <title>Car-Rental-About-Page</title>
 
-        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="../bower_components/foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href="http://fonts.googleapis.com/css?family=Signika:400,600,700,300" rel="stylesheet" type="text/css">
@@ -103,7 +103,7 @@
                             <br/><br/><br/><br/><br/><br/>
 
                             <div class="card" id="image5">
-                                <h2>Subscribe To Our Newsletter</h2>
+                                <h2>Subscribe to newsletter</h2>
                                 <div class="card-section">
 
 
@@ -153,21 +153,21 @@
         <!-- jsDelivr CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>
-            window.jQuery || document.write('<script src="jquery/dist/jquery.min.js"><\/script>');
+            window.jQuery || document.write('<script src="../bower_components/jquery/dist/jquery.min.js"><\/script>');
         </script>
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="foundation-sites/dist/js/foundation.js"></script>
-        <script src="foundation-sites/dist/js/app.js"></script>
-        <script src="foundation-sites/js/foundation.core.js"></script>
-        <script src="foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="foundation-sites/js/foundation.accordionMenu.js"></script>
-        <script src="foundation-sites/js/foundation.drilldown.js"></script>
-        <script src="foundation-sites/js/foundation.dropdownMenu.js"></script>
-        <script src="foundation-sites/js/foundation.util.keyboard.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
+        <script src="../bower_components/foundation-sites/dist/js/foundation.js"></script>
+        <script src="../bower_components/foundation-sites/dist/js/app.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.core.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.drilldown.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.dropdownMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.keyboard.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
         <!-- Fallback to local -->
     </body>
 </html>
