--- a/app/contact.html
+++ b/app/contact.html
@@ -6,11 +6,14 @@
         <meta name="viewport" content="user-scalable=yes">
         <meta name="viewport" content="target-densitydpi=device-dpi">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="copyright" content="&copy;raymondthompson" />
+        <meta name="robots" content="noindex,nofollow">
 
 
         <title>Car-Rental-Contact-Page</title>
 
-        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="../bower_components/foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -188,17 +191,17 @@
         </script>
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="foundation-sites/dist/js/foundation.js"></script>
-        <script src="foundation-sites/dist/js/app.js"></script>
-        <script src="foundation-sites/js/foundation.core.js"></script>
-        <script src="foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="foundation-sites/js/foundation.accordionMenu.js"></script>
-        <script src="foundation-sites/js/foundation.drilldown.js"></script>
-        <script src="foundation-sites/js/foundation.dropdownMenu.js"></script>
-        <script src="foundation-sites/js/foundation.util.keyboard.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
+        <script src="../bower_components/foundation-sites/dist/js/foundation.js"></script>
+        <script src="../bower_components/foundation-sites/dist/js/app.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.core.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.drilldown.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.dropdownMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.util.keyboard.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
+        <script src="../bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
         <!-- Fallback to local -->
 
     </body>
