--- a/app/500.html
+++ b/app/500.html
@@ -15,7 +15,7 @@
 
         <title>Car-Rental-500-Page</title>
 
-        <link rel="stylesheet" href="../bower_components/foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -60,12 +60,12 @@
 
                                 <nav id="primary_nav" >
                                     <ul class="vertical medium-horizontal menu" >
-                                        <li class="active"><a href="index.html">Home</a></li>
-                                        <li><a href="specials.html">Special Offers</a></li>
-                                        <li><a href="cars.html">Cars</a></li>
-                                        <li><a href="location.html">Locations</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li class="active"><a href="index.html" title="car-rental-home-page">Home</a></li>
+                                        <li><a href="#" title="car-rental-specials-page">Special Offers</a></li>
+                                        <li><a href="#" title="car-rental-cars-page">Cars</a></li>
+                                        <li><a href="#" title="car-rental-location-page">Locations</a></li>
+                                        <li><a href="#" title="car-rental-about-page">About</a></li>
+                                        <li><a href="#" title="car-rental-contact-page">Contact</a></li>
                                     </ul>
                                 </nav>
 
@@ -124,7 +124,7 @@
                     </footer>
                 </div><!--footer end-->
 
-                <p class="copy">Raymond Thompson 2013<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
+                <p class="copy">Raymond Thompson 2017<br/> built from Photoshop template downloaded from www.phpjabber.com<br/>
                     <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
                 </p>
             </div><!--wrapper end-->
@@ -135,21 +135,21 @@
         <!-- jsDelivr CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>
-             window.jQuery || document.write('<script src="../bower_components/jquery/dist/jquery.min.js"><\/script>');
+             window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
         </script>
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="../bower_components/foundation-sites/dist/js/foundation.js"></script>
-        <script src="../bower_components/foundation-sites/dist/js/app.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.core.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.drilldown.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.dropdownMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.keyboard.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+        <script src="foundation-sites/dist/js/foundation.js"></script>
+        <script src="foundation-sites/dist/js/app.js"></script>
+        <script src="foundation-sites/js/foundation.core.js"></script>
+        <script src="foundation-sites/js/foundation.util.triggers.js"></script>
+        <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
+        <script src="foundation-sites/js/foundation.accordionMenu.js"></script>
+        <script src="foundation-sites/js/foundation.drilldown.js"></script>
+        <script src="foundation-sites/js/foundation.dropdownMenu.js"></script>
+        <script src="foundation-sites/js/foundation.util.keyboard.js"></script>
+        <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
+        <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
         <!-- Fallback to local -->
     </body>
 </html>
