--- a/app/location.html
+++ b/app/location.html
@@ -16,7 +16,7 @@
         <!--End Scale-->
         <title>Car-Rental-Location-Page</title>
 
-        <link rel="stylesheet" href="../bower_components/foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
         <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -61,12 +61,12 @@
 
                                 <nav id="primary_nav" >
                                     <ul class="vertical medium-horizontal menu" >
-                                        <li class="active"><a href="index.html">Home</a></li>
-                                        <li><a href="specials.html">Special Offers</a></li>
-                                        <li><a href="cars.html">Cars</a></li>
-                                        <li><a href="location.html">Locations</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li class="active"><a href="index.html" title="car-rental-home-page">Home</a></li>
+                                        <li><a href="specials.html" title="car-rental-specials-page">Special Offers</a></li>
+                                        <li><a href="cars.html" title="car-rental-cars-page">Cars</a></li>
+                                        <li><a href="location.html" title="car-rental-location-page">Locations</a></li>
+                                        <li><a href="about.html" title="car-rental-about-page">About</a></li>
+                                        <li><a href="contact.html" title="car-rental-contact-page">Contact</a></li>
                                     </ul>
                                 </nav>
 
@@ -481,7 +481,7 @@
                         </div>
                     </footer>
                 </div><!--footer end-->
-                <p class="copy">Raymond Thompson 2013 built from Photoshop template downloaded from www.phpjabber.com<br/>
+                <p class="copy">Raymond Thompson 2017 built from Photoshop template downloaded from www.phpjabber.com<br/>
                     <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
                 </p>
             </div><!--wrapper end-->
