--- a/app/cars.html
+++ b/app/cars.html
@@ -11,7 +11,7 @@
         <meta name="robots" content="noindex,nofollow">
 
         <title>Car-Rental-Special-Cars-Page</title>
-        <link rel="stylesheet" href="../bower_components/foundation-sites/dist/css/foundation.css" />
+        <link rel="stylesheet" href="foundation-sites/dist/css/foundation.css" />
         <link rel="stylesheet" href="normalize-min.css" />
         <link rel="stylesheet" href="style-min.css" />
 
@@ -56,12 +56,12 @@
 
                                 <nav id="primary_nav" >
                                     <ul class="vertical medium-horizontal menu" >
-                                        <li class="active"><a href="index.html">Home</a></li>
-                                        <li><a href="specials.html">Special Offers</a></li>
-                                        <li><a href="cars.html">Cars</a></li>
-                                        <li><a href="location.html">Locations</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li class="active"><a href="index.html" title="car-rental-home-page">Home</a></li>
+                                        <li><a href="specials.html" title="car-rental-specials-page">Special Offers</a></li>
+                                        <li><a href="cars.html" title="car-rental-cars-page">Cars</a></li>
+                                        <li><a href="location.html" title="car-rental-location-page">Locations</a></li>
+                                        <li><a href="about.html" title="car-rental-about-page">About</a></li>
+                                        <li><a href="contact.html" title="car-rental-contact-page">Contact</a></li>
                                     </ul>
                                 </nav>
 
@@ -957,19 +957,19 @@
 
 
                             <ul id="footer_nav">
-                                <li><a href="index.html" >Home</a></li>
-                                <li><a href="specials.html"  >Special Offers</a></li>
-                                <li><a href="cars.html" >Cars</a></li>
-                                <li><a href="location.html" >Locations</a></li>
-                                <li><a href="about.html" >About</a></li>
-                                <li><a href="contact.html" >Contact</a></li>
+                                <li><a href="index.html" title="car-rental-home-page">Home</a></li>
+                                <li><a href="specials.html" title="car-rental-specials-page">Special Offers</a></li>
+                                <li><a href="cars.html" title="car-rental-cars-page">Cars</a></li>
+                                <li><a href="location.html" title="car-rental-location-page">Locations</a></li>
+                                <li><a href="about.html" title="car-rental-about-page">About</a></li>
+                                <li><a href="contact.html" title="car-rental-contact-page">Contact</a></li>
                             </ul>
 
 
                         </div>
                     </footer>
                 </div><!--footer end-->
-                <p class="copy">Raymond Thompson 2013 built from Photoshop template downloaded from www.phpjabber.com<br/>
+                <p class="copy">Raymond Thompson 2017 built from Photoshop template downloaded from www.phpjabber.com<br/>
                     <script type="text/javascript">document.write("Page Last Updated: " + document.lastModified);</script>
                 </p>
 
@@ -979,27 +979,27 @@
         <!-- jsDelivr CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>
-                        window.jQuery || document.write('<script src="../bower_components/jquery/dist/jquery.min.js"><\/script>');
+                        window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
         </script>
 
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
-        <script src="../bower_components/foundation-sites/dist/js/foundation.js"></script>
-        <script src="../bower_components/foundation-sites/dist/js/app.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.core.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.triggers.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.accordionMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.drilldown.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.dropdownMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.util.keyboard.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.responsiveMenu.js"></script>
-        <script src="../bower_components/foundation-sites/js/foundation.responsiveToggle.js"></script>
+        <script src="foundation-sites/dist/js/foundation.js"></script>
+        <script src="foundation-sites/dist/js/app.js"></script>
+        <script src="foundation-sites/js/foundation.core.js"></script>
+        <script src="foundation-sites/js/foundation.util.triggers.js"></script>
+        <script src="foundation-sites/js/foundation.util.mediaQuery.js"></script>
+        <script src="foundation-sites/js/foundation.accordionMenu.js"></script>
+        <script src="foundation-sites/js/foundation.drilldown.js"></script>
+        <script src="foundation-sites/js/foundation.dropdownMenu.js"></script>
+        <script src="foundation-sites/js/foundation.util.keyboard.js"></script>
+        <script src="foundation-sites/js/foundation.responsiveMenu.js"></script>
+        <script src="foundation-sites/js/foundation.responsiveToggle.js"></script>
 
         <!-- Fallback to local -->
 
 
-        <script src="../bower_components/foundation-sites/js/foundation.tabs.js"></script>
+        <script src="foundation-sites/js/foundation.tabs.js"></script>
 
     </body>
 </html>
