--- a/app/401.html
+++ b/app/401.html
@@ -108,12 +108,12 @@
                         <div class="large-12 medium-12 small-12 columns">
 
                             <ul id="footer_nav">
-                                <li><a href="#" >Home</a></li>
-                                <li><a href="#" >Special Offers</a></li>
-                                <li><a href="#" >Cars</a></li>
-                                <li><a href="#" >Locations</a></li>
-                                <li><a href="#" >About</a></li>
-                                <li><a href="#" >Contact</a></li>
+                                <li><a href="#" title="car-rental-home-page" >Home</a></li>
+                                <li><a href="#" title="car-rental-specials-page">Specials</a></li>
+                                <li><a href="#" title="car-rental-cars-page">Cars</a></li>
+                                <li><a href="#" title="car-rental-location-page">Locations</a></li>
+                                <li><a href="#" title="car-rental-about-page">About</a></li>
+                                <li><a href="#" title="car-rental-contact-page">Contact</a></li>
                             </ul>
 
 
@@ -130,7 +130,7 @@
         </div><!--row end-->
 
         <!-- jsDelivr CDN -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>
                                 window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
         </script>
