--- a/app/about.html
+++ b/app/about.html
@@ -151,9 +151,8 @@
         </div><!--row end-->
 
         <!-- jsDelivr CDN -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>
-            window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script> window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
         </script>
         <!-- Fallback to local -->
         <script src="//cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
