--- a/app/index.html
+++ b/app/index.html
@@ -368,9 +368,8 @@
         <!--row end-->
 
         <!-- jsDelivr CDN -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>
-                        window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script> window.jQuery || document.write('<script src="scripts/jquery/dist/jquery.min.js"><\/script>');
         </script>
 
         <!-- Fallback to local -->
